--- a/src/main/resources/templates/portaria/portaria_listagem.html
+++ b/src/main/resources/templates/portaria/portaria_listagem.html
@@ -19,7 +19,7 @@
         
         <div th:replace="~{alert}"></div>
         
-        <form th:action="@{/portarias/salvar}" method="post">
+        <form th:action="@{/portarias/salvar}" sec:authorize="hasRole('ROLE_MANAGER')"  method="post">
             <table class="table table-striped table-bordered table-sm">
                 <thead class="table-dark">
                     <tr>
@@ -76,7 +76,7 @@
 								<i class="bi bi-eye-fill" title="Propriedades"></i>
 								</a>
    							 
-   							 <form th:action="@{/portarias/iniciar-digitalizacao/{id}(id=${portaria.id})}" sec:authorize="hasRole('EMPLOYEE')" method="post">
+   							 <form th:action="@{/portarias/iniciar-digitalizacao/{id}(id=${portaria.id})}" sec:authorize="hasRole('MANAGER')" method="post">
     						    <button type="submit" th:if="${portaria.statusSessao.name() == 'ABERTA'}" class="btn btn-primary btn-sm">
         				 		   Em Digitação
        							 </button>
@@ -86,7 +86,7 @@
    								   Nova Nota
    								 </button>
 							</form>
-							<form th:action="@{/portarias/iniciar-analise/{id}(id=${portaria.id})}" sec:authorize="hasRole('EMPLOYEE')" method="post">
+							<form th:action="@{/portarias/iniciar-analise/{id}(id=${portaria.id})}" sec:authorize="hasRole('MANAGER')" method="post">
       							<button type="submit" th:if="${portaria.statusSessao.name() == 'EM_DIGITACAO'}" class="btn btn-warning btn-sm">
             						Finalizar Digitação
       							</button>
