--- a/src/main/resources/templates/grupo/grupo_listagem.html
+++ b/src/main/resources/templates/grupo/grupo_listagem.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<title>Sistema DEVCEASA</title>
+	<title>Sistema SIMECC</title>
 	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
 				<br>
 				<div class="meu-hr">
 					
-					<p>Listagem de grupos </p><hr>
+					<p>Listagem de Grupos </p><hr>
 				</div>
 				
 				<a class="inicio" th:href="@{/}">Início</a>
