--- a/src/main/resources/templates/usuario/alterar-senha.html
+++ b/src/main/resources/templates/usuario/alterar-senha.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Alterar Senha</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+	<title>Sistema DEVCEASA</title>
+	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
+
+<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+
     <div class="container">
-        <h1>Alterar Senha</h1>
+    
+    <div th:replace="~{alert}"></div>
+    
+        <h3>Alterar Senha</h3>
         <form th:action="@{/usuario/alterar-senha}" method="post">
             <div class="mb-3">
                 <label for="oldPassword" class="form-label">Senha Atual</label>
