improved in menus for appears

--- a/src/main/resources/templates/produto/grafico_produtos.html
+++ b/src/main/resources/templates/produto/grafico_produtos.html
@@ -57,7 +57,8 @@
 
     <!-- Mostrando as datas selecionadas -->
     <div class="mt-3">
-        <p><strong>dados extraídos das notas fiscais entre as datas de : </strong> [[${#temporals.format(startDate, 'dd-MM-yyyy')}]] até [[${#temporals.format(endDate,'dd-MM-yyyy')}]]</p>
+         <p><strong>dados extraídos das notas fiscais entre as datas de : </strong> [[${#temporals.format(startDate, 'dd-MM-yyyy')}]] até [[${#temporals.format(endDate,'dd-MM-yyyy')}]]</p>
+         <p><strong>Volume Total Comercializado:</strong> [[${(volumeTotal)}]] Kilos</p>
     </div>
 </div>
 
