produção ajuste txt prohort

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -60,7 +60,7 @@
                           <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/relatorio-cotacoes}">Relatório Bimestral de Cotações</a></li>
                           <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/graficos1}">Gráfico Produto Peso</a></li>
                           <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/graficos/produto_pesquisar}">Gráfico Produto Cotação</a></li>
-                          
+                          <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/exportacao/abertura}">Exportação Prohort</a></li>
                     	
                     </ul>
                 </li>
