--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -65,10 +65,9 @@
                     <div class="form-group">
                         <label for="municipioCodigo">Município</label>
                         <div class="input-group">
-                            <select id="municipio" th:field="*{municipio.id}" class="form-control" required>
-                                <option value="" disabled selected>Selecione um município</option>
-                                <option th:each="municipio : ${municipios}" th:value="${municipio.id}" th:text="${municipio.nome} + ' - ' + ${municipio.uf}"></option>
-                            </select>
+                              <input type="text" id="municipioCodigo" class="form-control" placeholder="Digite o código do município" required>
+       						 <input type="text" id="municipioNome" class="form-control" placeholder="Nome do município" readonly>
+                           <input type="hidden" id="municipioId" name="municipio.id">
                             <button type="button" onclick="openMunicipioModal()">Buscar Município</button>
                         </div>
                     </div>
@@ -312,7 +311,7 @@ function selectProduct(codigo, id, variedade, subvariedade) {
 </script>
 
   <script src="/script/nota/clearForm.js"></script>
-   
+   <script src="/script/nota/searchMunicipioByCodigo.js"></script>
     <script src="/script/nota/municipioSearch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
